# Intelligent_Recognition_Client

./: CMakeLists.txt  Intelligent_Recognition_Client.code-workspace  run.sh
code/include/: common.h  control.h  pwm.h  servo.h  tcp.h  video.h
code/src/: control.cc  luckfox_mpi.cc  main.cc  pwm.cc  servo.cc  tcp.cc  video.cc  yolov5.cc
example/luckfox_pico_rtsp_yolov5/src/: main.cc  postprocess.cc
include/rknn/: postprocess.h
install/: Intelligent_Recognition_Client
